--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       min-height:64px; padding:10px 14px;
       cursor:pointer;
     }
-    .cat-fa{justify-self:start; color:#ffd37e; font-weight:800;margin-left: 17px}
-    .cat-en{justify-self:end; color:#e7cfa0; font-weight:800}
+    .cat-fa{justify-self:start; color:#ffd37e; font-weight:800;margin-left: 17px; white-space: nowrap;}
+    .cat-en{justify-self:end; color:#e7cfa0; font-weight:800; white-space: nowrap;}
     /* دایره مرکز */
     .cat-badge{
       position:absolute; left:50%; transform:translateX(-50%); top:50%; translate:0 -50%;
