edit json add img

--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
       "en": "Shakes",
       "icon": "images/shake.png",
       "items": [
-        {"name": "شیک وانیل", "price": "180 T"},
-        {"name": "شیک شکلات", "price": "180 T"},
+        {"name": "شیک وانیل", "price": "140 T"},
+        {"name": "شیک شکلات", "price": "160 T"},
+        {"name": "شیک پاستیل", "price": "190 T"},
         {"name": "شیک نوتلا", "price": "180 T"},
-        {"name": "شیک موز", "price": "180 T"},
-        {"name": "شیک اورئو", "price": "180 T"},
-        {"name": "شیک توت‌فرنگی", "price": "180 T"},
+        {"name": "شیک بادام زمینی", "price": "170 T"},
+        {"name": "شیک توت فرنگی", "price": "160 T"},
         {"name": "شیک لوتوس", "price": "180 T"}
       ]
     },
@@ -306,8 +306,9 @@
         {"name": "نیمرو", "price": "100 T"},
         {"name": "سوسیس تخم‌مرغ", "price": "160 T"},
         {"name": "تخم‌مرغ خرما", "price": "160 T"},
-        {"name": "تست آووکادو", "price": "130 T"},
-        {"name": "ساندویچ اروپا", "price": "110 T"}
+        {"name": "تخم‌مرغ و سیب‌زمینی", "price": "130 T"},
+        {"name": "خوراک لوبیا", "price": "110 T"},
+        {"name": "بشقاب انگلیسی", "price": "280 T"}
       ]
     },
     {
@@ -316,23 +317,30 @@
       "en": "Appetizers",
       "icon": "images/salad.png",
       "items": [
-        {"name": "سالاد سزار", "price": "340 T"},
-        {"name": "سالاد فصل", "price": "180 T"},
-        {"name": "سیب‌زمینی سرخ‌کرده", "price": "160 T"},
-        {"name": "قارچ سوخاری", "price": "210 T"}
+        {"name": "سیب ساده", "price": "190 T"},
+        {"name": "سیب آلفردو", "price": "240 T"},
+        {"name": "سیب بیکن", "price": "290 T"},
+        {"name": "سالاد سزار سوخاری", "price": "340 T"},
+        {"name": "سالاد سزار گریل", "price": "340 T"},
+        {"name": "اسنک 4 تکه + سیب", "price": "290 T"}
       ]
     },
     {
       "key": "main-dishes",
       "fa": "غذای اصلی",
       "en": "Main Dishes",
-      "icon": "images/hot-drink.png",
+      "icon": "images/main-food.png",
       "items": [
-        {"name": "پاستا آلفردو", "price": "520 T"},
-        {"name": "پاستا پستو", "price": "540 T"},
-        {"name": "چیکن برگر", "price": "410 T"},
-        {"name": "بیف برگر", "price": "450 T"},
-        {"name": "فیله استریپس", "price": "480 T"}
+        {"name": "پاستا", "price": "330 T"},
+        {"name": "بشقاب رژیمی", "price": "300 T"},
+        {"name": "بشقاب فیله گریل", "price": "360 T"},
+        {"name": "بشقاب خوشمزه", "price": "380 T"},
+        {"name": "برگر کلاسیک", "price": "340 T"},
+        {"name": "چیز برگر", "price": "370 T"},
+        {"name": "بیکن برگر", "price": "410 T"},
+        {"name": "سوسیس بندری (پرسی)", "price": "240 T"},
+        {"name": "سیب لاین هات داگ", "price": "210 T"},
+        {"name": "سیب لاین برگر", "price": "270 T"}
       ]
     }
   ]
