--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
           <!-- اینستاگرام -->
           <div class="instagram">
-            <a href="https://instagram.com/cofe_sholex" target="_blank">
+            <a href="https://instagram.com/cafe_sholex" target="_blank">
               <img src="images/Instagram_logo.png" alt="Instagram" />
               <span>اینستاگرام</span>
             </a>
