--- a/index.html
+++ b/index.html
@@ -441,12 +441,13 @@
             "en": "Appetizers",
             "icon": "images/salad.png",
             "items": [
-              { "name": "سیب ساده", "price": "190 T" },
-              { "name": "سیب آلفردو", "price": "240 T" },
-              { "name": "سیب بیکن", "price": "290 T" },
-              { "name": "سالاد سزار سوخاری", "price": "340 T" },
-              { "name": "سالاد سزار گریل", "price": "340 T" },
-              { "name": "اسنک 4 تکه + سیب", "price": "290 T" }
+              { "name": "سیب ساده", "price": "220 T", "desc": "350 گرم سیب زمینی + ادویه و سس مخصوص" },
+              { "name": "سیب آلفردو", "price": "275 T", "desc": "350 گرم سیب زمینی + سس آلفردو مخصوص" },
+              { "name": "سیب بیکن", "price": "310 T", "desc": "350 گرم سیب زمینی + بیکن 90% + پنیر"},
+              { "name": "سالاد سزار سوخاری", "price": "340 T", "desc": "150 گرم سینه سوخاری + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
+              { "name": "سالاد سزار گریل", "price": "380 T", "desc": "150 گرم سینه گریل + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
+              { "name": "اسنک 4 تکه", "price": "320 T", "desc": "4 تکه اسنک مخصوص + 100 گرم سیب زمینی"},
+              { "name": "سیب مخصوص مستر شولکس", "price": "330 T", "desc": "350 گرم سیب زمینی + پنیر + قارچ"}
             ]
           },
           {
@@ -455,7 +456,7 @@
             "en": "Main Dishes",
             "icon": "images/main-food.png",
             "items": [
-              { "name": "پاستا", "price": "330 T" },
+              { "name": "پاستا", "price": "330 T", "desc": "" },
               { "name": "بشقاب رژیمی", "price": "300 T" },
               { "name": "بشقاب فیله گریل", "price": "360 T" },
               { "name": "بشقاب خوشمزه", "price": "380 T" },
