--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               { "name": "سالاد سزار سوخاری", "price": "340 T", "desc": "150 گرم سینه سوخاری + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
               { "name": "سالاد سزار گریل", "price": "380 T", "desc": "150 گرم سینه گریل + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
               { "name": "اسنک 4 تکه", "price": "320 T", "desc": "4 تکه اسنک مخصوص + 100 گرم سیب زمینی"},
-              { "name": "سیب مخصوص مستر شولکس", "price": "330 T", "desc": "350 گرم سیب زمینی + پنیر + قارچ"}
+              { "name": "سیب مخصوص مستر شولکس", "price": "000 T", "desc": "350 گرم سیب زمینی + پنیر + قارچ"}
             ]
           },
           {
@@ -456,16 +456,28 @@
             "en": "Main Dishes",
             "icon": "images/main-food.png",
             "items": [
-              { "name": "پاستا", "price": "330 T", "desc": "" },
-              { "name": "بشقاب رژیمی", "price": "300 T" },
-              { "name": "بشقاب فیله گریل", "price": "360 T" },
-              { "name": "بشقاب خوشمزه", "price": "380 T" },
-              { "name": "برگر کلاسیک", "price": "340 T" },
-              { "name": "چیز برگر", "price": "370 T", "desc": "برگر ممتاز 150 گرم، سیب سرخ‌شده، پنیر ورقه‌ای، کاهو، گوجه، خیارشور" },
-              { "name": "بیکن برگر", "price": "410 T" },
-              { "name": "سوسیس بندری (پرسی)", "price": "240 T" },
-              { "name": "سیب لاین هات داگ", "price": "210 T" },
-              { "name": "سیب لاین برگر", "price": "270 T" }
+              { "name": "ژامبون گوشت تنوری", "price": "340 T", "desc": "ژامبون گوشت 90% + پنیر + قارچ + 100 گرم سیب" },
+              { "name": "ژامبون مرغ تنوری", "price": "340 T", "desc": "ژامبون مرغ 90% + پنیر + قارچ + 100 گرم سیب" },
+              { "name": "ژامبون گوشت سرد", "price": "290 T", "desc": "ژامبون گوشت 90%" },
+              { "name": "ژامبون مرغ سرد", "price": "290 T", "desc": "ژامبون مرغ 90%" },
+              { "name": "هات داگ", "price": "000 T", "desc": "هات داگ مجاری + سس مخصوص" },
+              { "name": "هات داگ ویژه", "price": "000 T", "desc": "هات داگ مجاری + قارچ + پنیر + سس مخصوص" },
+              { "name": "بلغاری", "price": "280 T", "desc": "سوسیس بلغاری + سس مخصوص" },
+              { "name": "بلغاری ویژه", "price": "310 T", "desc": "سوسیس بلغاری + قارچ + پنیر + سس مخصوص" },
+              { "name": "سینه مرغ گریل", "price": "340 T", "desc": "150 گرم سینه مرغ + سس مخصوص" },
+              { "name": "کوکتل", "price": "280 T", "desc": "کوکتل دودی + سس مخصوص" },
+              { "name": "کوکتل ویژه ", "price": "290 T", "desc": "کوکتل دودی + قارچ + پنیر + سس مخصوص" },
+              { "name": "برگر کلاسیک", "price": "370 T", "desc": "150 گرم برگر دست ساز + 100 گرم سیب" },
+              { "name": "چیز برگر", "price": "410 T", "desc": "150 گرم برگر دست ساز + پنیر + 100 گرم سیب" },
+              { "name": "برگر مخصوص مستر شولکس", "price": "440 T", "desc": "150 گرم برگر دست ساز + ژامبون + پنیر + قارچ + 100 گرم سیب" },
+              { "name": "ماشروم برگر", "price": "390 T", "desc": "150 گرم برگر دست ساز + قارچ + 100 گرم سیب" },
+              { "name": "دوبل برگر", "price": "540 T", "desc": "2 عدد 150 گرمی برگر دست ساز + 100 گرم سیب" },
+              { "name": "بشقاب رژیمی", "price": "330 T", "desc": "150 گرم سیب مزه دار شده + تخ مرغ آبپز + سیب گریل شده + سالاد مخصوص" },
+              { "name": "بشقاب فیله گریل", "price": "360 T", "desc": "150 گرم فیله مرغ + 100 گرم سیب + سالاد مخصوص" },
+              { "name": "بشقاب خوشمزه", "price": "450 T", "desc": "سوسیس + ژامبون + سینه سوخاری + 100 گرم سیب + قارچ + سالاد مخصوص" },
+              { "name": "بشقاب بندری", "price": "240 T", "desc": "سوسیس بندری + نان باگت + گوجه + خیارشور + کاهو" },
+              { "name": "بشقاب سیب لاین هات داگ", "price": "350 T", "desc": "350 گرم سیب + پنیر + هات داگ مجاری" },
+              { "name": "بشقاب سیب لاین برگر", "price": "370 T", "desc": "350 گرم سیب + پنیر + برگر دست ساز" }
             ]
           }
         ]
