--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               { "name": "سالاد سزار سوخاری", "price": "340 T", "desc": "150 گرم سینه سوخاری + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
               { "name": "سالاد سزار گریل", "price": "380 T", "desc": "150 گرم سینه گریل + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
               { "name": "اسنک 4 تکه", "price": "320 T", "desc": "4 تکه اسنک مخصوص + 100 گرم سیب زمینی"},
-              { "name": "سیب مخصوص مستر شولکس", "price": "000 T", "desc": "350 گرم سیب زمینی + پنیر + قارچ"}
+              { "name": "سیب مخصوص مستر شولکس", "price": "330 T", "desc": "350 گرم سیب + پنیر + قارچ + سینه مرغ گریل"}
             ]
           },
           {
@@ -460,8 +460,8 @@
               { "name": "ژامبون مرغ تنوری", "price": "340 T", "desc": "ژامبون مرغ 90% + پنیر + قارچ + 100 گرم سیب" },
               { "name": "ژامبون گوشت سرد", "price": "290 T", "desc": "ژامبون گوشت 90%" },
               { "name": "ژامبون مرغ سرد", "price": "290 T", "desc": "ژامبون مرغ 90%" },
-              { "name": "هات داگ", "price": "000 T", "desc": "هات داگ مجاری + سس مخصوص" },
-              { "name": "هات داگ ویژه", "price": "000 T", "desc": "هات داگ مجاری + قارچ + پنیر + سس مخصوص" },
+              { "name": "هات داگ", "price": "230 T", "desc": "هات داگ مجاری + سس مخصوص" },
+              { "name": "هات داگ ویژه", "price": "260 T", "desc": "هات داگ مجاری + قارچ + پنیر + سس مخصوص" },
               { "name": "بلغاری", "price": "280 T", "desc": "سوسیس بلغاری + سس مخصوص" },
               { "name": "بلغاری ویژه", "price": "310 T", "desc": "سوسیس بلغاری + قارچ + پنیر + سس مخصوص" },
               { "name": "سینه مرغ گریل", "price": "340 T", "desc": "150 گرم سینه مرغ + سس مخصوص" },
