--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
               { "name": "بلغاری", "price": "280 T", "desc": "سوسیس بلغاری + سس مخصوص" },
               { "name": "بلغاری ویژه", "price": "310 T", "desc": "سوسیس بلغاری + قارچ + پنیر + سس مخصوص" },
               { "name": "سینه مرغ گریل", "price": "340 T", "desc": "150 گرم سینه مرغ + سس مخصوص" },
-              { "name": "کوکتل", "price": "280 T", "desc": "کوکتل دودی + سس مخصوص" },
-              { "name": "کوکتل ویژه ", "price": "290 T", "desc": "کوکتل دودی + قارچ + پنیر + سس مخصوص" },
+              { "name": "ساندویچ کوکتل", "price": "260 T", "desc": "کوکتل دودی + سس مخصوص" },
+              { "name": "ساندویچ کوکتل ویژه", "price": "290 T", "desc": "کوکتل دودی + قارچ + پنیر + سس مخصوص" },
               { "name": "برگر کلاسیک", "price": "370 T", "desc": "150 گرم برگر دست ساز + 100 گرم سیب" },
               { "name": "چیز برگر", "price": "410 T", "desc": "150 گرم برگر دست ساز + پنیر + 100 گرم سیب" },
               { "name": "برگر مخصوص مستر شولکس", "price": "440 T", "desc": "150 گرم برگر دست ساز + ژامبون + پنیر + قارچ + 100 گرم سیب" },
