--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           padding 0.32s ease;
       }
       .items.open {
-        max-height: 1877px;
+        max-height: 1965px;
         opacity: 1;
         padding: 10px;
       }
@@ -351,6 +351,9 @@
             "items": [
               { "name": "اسپرسو", "price": "70 T" },
               { "name": "اسپرسو دبل", "price": "85 T" },
+              { "name": "قهوه ترک", "price": "100 T" },
+              { "name": "قهوه (فرانسه)", "price": "140 T" },
+              { "name": "قهوه دمی (کمکس)", "price": "140 T" },
               { "name": "آمریکانو", "price": "90 T" },
               { "name": "موکا", "price": "115 T" },
               { "name": "لاته", "price": "110 T" },
@@ -360,11 +363,10 @@
               { "name": "کارامل ماکیاتو", "price": "120 T" },
               { "name": "شیر نسکافه", "price": "105 T" },
               { "name": "شیر عسل دارچین", "price": "105 T" },
-              { "name": "چای ماسالا", "price": "90 T" },
-              { "name": "هات چاکلت", "price": "95 T" },
-              { "name": "وایت چاکلت", "price": "95 T" },
-              { "name": "چای سیاه تک‌ نفره", "price": "65 T" },
-              { "name": "چای دونفره", "price": "80 T" }
+              { "name": "چای ماسالا", "price": "100 T" },
+              { "name": "هات چاکلت", "price": "130 T" },
+              { "name": "چای سیاه تک‌ نفره", "price": "75 T" },
+              { "name": "چای دونفره", "price": "90 T" }
             ]
           },
           {
@@ -389,7 +391,8 @@
               { "name": "آیس کارامل", "price": "140 T" },
               { "name": "آیس موکا", "price": "125 T" },
               { "name": "آیس آمریکانو", "price": "115 T" },
-              { "name": "آفوگاتو", "price": "120 T" }
+              { "name": "آفوگاتو", "price": "150 T" },
+              { "name": "کوک اسپرسو", "price": "180 T" }
             ]
           },
           {
@@ -398,11 +401,13 @@
             "en": "Mocktails",
             "icon": "images/maktail.png",
             "items": [
-              { "name": "بلو هاوایی", "price": "180 T" },
-              { "name": "لیموناد", "price": "130 T" },
-              { "name": "موهیتو", "price": "145 T" },
-              { "name": "لاور", "price": "160 T" },
-              { "name": "کوکورنج", "price": "180 T" }
+              { "name": "مخصوص مستر شولکس", "price": "230 T" },
+              { "name": "بلو هاوایی", "price": "210 T" },
+              { "name": "لیموناد", "price": "160 T" },
+              { "name": "موهیتو", "price": "175 T" },
+              { "name": "لاور", "price": "180 T" },
+              { "name": "کوکو کولا", "price": "160 T" },
+              { "name": "کولابری", "price": "175 T" }
             ]
           },
           {
@@ -411,13 +416,14 @@
             "en": "Shakes",
             "icon": "images/shake.png",
             "items": [
-              { "name": "شیک وانیل", "price": "140 T" },
-              { "name": "شیک شکلات", "price": "160 T" },
-              { "name": "شیک پاستیل", "price": "190 T" },
-              { "name": "شیک نوتلا", "price": "180 T" },
-              { "name": "شیک بادام زمینی", "price": "170 T" },
-              { "name": "شیک توت فرنگی", "price": "160 T" },
-              { "name": "شیک لوتوس", "price": "180 T" }
+              { "name": "شیک وانیل", "price": "180 T" },
+              { "name": "شیک شکلات", "price": "190 T" },
+              { "name": "شیک پاستیل", "price": "260 T" },
+              { "name": "شیک نوتلا", "price": "260 T" },
+              { "name": "شیک بادام زمینی", "price": "210 T" },
+              { "name": "شیک توت فرنگی", "price": "180 T" },
+              { "name": "شیک لوتوس", "price": "230 T" },
+              { "name": "شیک قهوه", "price": "250 T" }
             ]
           },
           {
@@ -426,13 +432,13 @@
             "en": "Breakfast",
             "icon": "images/breakfast.png",
             "items": [
-              { "name": "املت", "price": "140 T" },
-              { "name": "نیمرو", "price": "100 T" },
-              { "name": "سوسیس تخم‌مرغ", "price": "160 T" },
+              { "name": "املت", "price": "220 T" },
+              { "name": "نیمرو", "price": "120 T" },
+              { "name": "سوسیس تخم‌مرغ", "price": "250 T" },
               { "name": "تخم‌مرغ خرما", "price": "160 T" },
-              { "name": "تخم‌مرغ و سیب‌زمینی", "price": "130 T" },
-              { "name": "خوراک لوبیا", "price": "110 T" },
-              { "name": "بشقاب انگلیسی", "price": "280 T" }
+              { "name": "تخم‌مرغ و سیب‌زمینی", "price": "160 T" },
+              { "name": "خوراک لوبیا", "price": "150 T" },
+              { "name": "بشقاب انگلیسی", "price": "320 T" }
             ]
           },
           {
@@ -442,7 +448,7 @@
             "icon": "images/salad.png",
             "items": [
               { "name": "سیب ساده", "price": "220 T", "desc": "350 گرم سیب زمینی + ادویه و سس مخصوص" },
-              { "name": "سیب آلفردو", "price": "275 T", "desc": "350 گرم سیب زمینی + سس آلفردو مخصوص" },
+              { "name": "سیب آلفردو", "price": "270 T", "desc": "350 گرم سیب زمینی + سس آلفردو مخصوص" },
               { "name": "سیب بیکن", "price": "310 T", "desc": "350 گرم سیب زمینی + بیکن 90% + پنیر"},
               { "name": "سالاد سزار سوخاری", "price": "340 T", "desc": "150 گرم سینه سوخاری + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
               { "name": "سالاد سزار گریل", "price": "380 T", "desc": "150 گرم سینه گریل + کاهو + نان سیر + گوجه + زیتون + سس مخصوص"},
@@ -472,6 +478,7 @@
               { "name": "برگر مخصوص مستر شولکس", "price": "440 T", "desc": "150 گرم برگر دست ساز + ژامبون + پنیر + قارچ + 100 گرم سیب" },
               { "name": "ماشروم برگر", "price": "390 T", "desc": "150 گرم برگر دست ساز + قارچ + 100 گرم سیب" },
               { "name": "دوبل برگر", "price": "540 T", "desc": "2 عدد 150 گرمی برگر دست ساز + 100 گرم سیب" },
+              { "name": "پاستا آلفردو", "price": "370 T", "desc": "پنه 150 گرم + سس مخصوص آلفردو" },
               { "name": "بشقاب رژیمی", "price": "330 T", "desc": "150 گرم سیب مزه دار شده + تخ مرغ آبپز + سیب گریل شده + سالاد مخصوص" },
               { "name": "بشقاب فیله گریل", "price": "360 T", "desc": "150 گرم فیله مرغ + 100 گرم سیب + سالاد مخصوص" },
               { "name": "بشقاب خوشمزه", "price": "450 T", "desc": "سوسیس + ژامبون + سینه سوخاری + 100 گرم سیب + قارچ + سالاد مخصوص" },
